# NLP_text_normalization

./: .gitignore  Dockerfile  Dockerfile.client  Dockerfile.perf  README.md  create_submission.py  docker-compose.yml  enhanced_text_normalization.py  notebook.ipynb  pyproject.toml  requirements.txt
text_normalization_triton/: README.md
text_normalization_triton/client/: client.py  onnx_client.py  test_client.py
text_normalization_triton/model_repository/dictionary_normalizer/: config.pbtxt
text_normalization_triton/model_repository/dictionary_normalizer/1/: model.py
text_normalization_triton/model_repository/rule_normalizer/: config.pbtxt
text_normalization_triton/model_repository/rule_normalizer/1/: model.py
text_normalization_triton/model_repository/text_normalization_ensemble/: config.pbtxt
text_normalization_triton/model_repository/text_normalizer/: config.pbtxt
text_normalization_triton/model_repository/text_normalizer_pipeline/: config.pbtxt
text_normalization_triton/model_repository/text_normalizer_pipeline/1/: model.py
text_normalization_triton/perf_data/: generate_test_data.py
text_normalization_triton/scripts/: analyze_performance.py  convert_to_onnx.py  run_performance_test.sh
text_normalizer_onnx/: config.pbtxt
