[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Dark-Type <SKAZHUTIN.N@MAIL.RU>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = ">=2.3.0,<3.0.0"
tqdm = ">=4.67.1,<5.0.0"
notebook = ">=7.4.3,<8.0.0"
torch = ">=2.7.1,<3.0.0"
transformers = ">=4.52.4,<5.0.0"
sentencepiece = ">=0.2.0,<0.3.0"
iprogress = ">=0.4,<0.5"
protobuf = ">=6.31.1,<7.0.0"
scikit-learn = ">=1.7.0,<2.0.0"
wandb = ">=0.20.1,<0.21.0"
onnx = ">=1.18.0,<2.0.0"
onnxruntime = ">=1.22.0,<2.0.0"
num2words = ">=0.5.14,<0.6.0"
optimum = ">=1.25.3,<2.0.0"
tritonclient = ">=2.58.0,<3.0.0"
seaborn = ">=0.13.2,<0.14.0"
matplotlib = ">=3.10.3,<4.0.0"
poetry-core = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"